--- a/src/_layouts/blog.njk
+++ b/src/_layouts/blog.njk
@@ -3,6 +3,7 @@ layout: default.njk
 ---
 <main id="main" class="text-gray-800 bg-gray-200">
   <div class="post">
+    <h1>{{title}}</h1>
     {{ content | safe }}
   </div>
 </main>
