--- a/src/_layouts/blog.njk
+++ b/src/_layouts/blog.njk
@@ -1,11 +1,18 @@
 ---
 layout: default.njk
+bodyClass: text-gray-800 bg-gray-100
 ---
-<main id="main" class="text-gray-800 bg-gray-100">
+
+<main id="main">
   <div class="post">
+    <!-- @TODO couldn't get this working with 'not' keyword, so using else instead -->
+    {% if permalink === "/" %} {% else %}
+    <a href="/">← back</a>
+    {% endif %}
     <div class="title">
-      <h1>{{title}}</h1>
-      <span class="author">by <i>{{author}}</i>
+      <h1>{{ title }}</h1>
+      <span class="author"
+        >by <i>{{ author }}</i>
       </span>
     </div>
     {{ content | safe }}
