--- a/src/assets/styles/components/_post.css
+++ b/src/assets/styles/components/_post.css
@@ -4,12 +4,12 @@
 }
 
 .post > blockquote {
-  @apply border-solid border-gray-700 border-l-4 px-5 py-2 my-10 bg-gray-200;
+  @apply border-solid border-gray-700 border-l-4 px-5 py-2 my-10 bg-gray-300;
 }
 
 
 .post > p > code {
-  @apply inline-block px-2 bg-gray-200;
+  @apply inline-block px-2 bg-white;
 }
 
 .post > .title > h1 {
@@ -17,16 +17,7 @@
 }
 
 .post > h2 {
-  @apply text-2xl text-gray-900 font-medium pt-8 mb-4;
-}
-
-.post h2::after {
-  @apply block;
-  content: '';
-  width: 2rem;
-  height: 0.15rem;
-  margin-top: 1rem;
-  @apply bg-gray-700;
+  @apply text-xl text-gray-900 font-medium pt-4 mb-2;
 }
 
 
