--- a/src/assets/styles/components/_post.css
+++ b/src/assets/styles/components/_post.css
@@ -1,6 +1,4 @@
-.post {
-  max-width: 70ch;
-  @apply px-10 mx-auto;
+.post { 
 }
 
 .post > blockquote {
@@ -59,7 +57,7 @@
 }
 
 .post  /*.katex-block */  .frac-line {
-  @apply currentcolor;
+  @apply text-current;
 }
 
 .post :not(pre)>code[class*=language-], .post pre[class*=language-] {
