--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -7,6 +7,8 @@
 
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
-  <title>{{ data.title or title }}</title>
+  <title> 
+    {{ title }}
+  </title>
 
 </head> 
