Fix fraction lines color in Katex

--- a/src/assets/styles/components/_post.css
+++ b/src/assets/styles/components/_post.css
@@ -56,8 +56,8 @@
   @apply my-10;
 }
 
-.post  /*.katex-block */  .frac-line {
-  @apply text-current;
+.post .katex * {
+  border-color: currentColor;
 }
 
 .post :not(pre)>code[class*=language-], .post pre[class*=language-] {
