--- a/src/assets/styles/components/_post.css
+++ b/src/assets/styles/components/_post.css
@@ -111,3 +111,14 @@
 .post tbody th {
   @apply py-2 border-b border-gray-300;
 }
+
+.full-bleed {
+  width: 100vw;
+  margin-left: calc(50% - 50vw);
+}
+
+.w-max-1100 {
+  max-width: 1100px;
+  width: 100%;
+  margin: 0 auto;
+}
