Move permlink anchor in front of headings

--- a/src/_includes/global-nav.html
+++ b/src/_includes/global-nav.html
@@ -1,6 +1,6 @@
 <div class="bg-white border-b-1 border-gray-400">
   <nav>
-    <ul class="content-wrapper global-nav flex flex-center py-4">
+    <ul class="content-wrapper global-nav flex flex-center py-4 list-none">
       {% for item in navigation.items %}
       <li class="pr-4">
         <a
