--- a/src/assets/styles/components/_post.css
+++ b/src/assets/styles/components/_post.css
@@ -13,9 +13,9 @@
   @apply inline-block px-2 bg-white;
 }
 
-.post > .title > h1 {
+/* .post > .title > h1 {
   @apply text-2xl font-semibold;
-}
+} */
 
 .post > h2 {
   @apply text-xl text-gray-900 font-medium pt-4 mb-2;
@@ -67,9 +67,9 @@
   @apply mb-12;
 }
 
-.post > .title > h1 {
+/* .post > .title > h1 {
   @apply text-2xl font-semibold;
-}
+} */
 
 .post > .author {
   @apply mt-4 inline-block;
