masthead style update (#45)

--- a/src/_includes/global-nav.html
+++ b/src/_includes/global-nav.html
@@ -1,8 +1,8 @@
-<div class="bg-white border-b-1 border-gray-400">
+<div class="">
   <nav>
-    <ul class="content-wrapper global-nav flex flex-center py-4 list-none">
+    <ul class="content-wrapper global-nav flex flex-center justify-center py-4 list-none">
       {% for item in navigation.items %}
-      <li class="pr-4">
+      <li>
         <a
           href="{{ item.url }}"
           class="{{ item.cssClass }} no-underline"
