--- a/src/assets/styles/base/_typography.css
+++ b/src/assets/styles/base/_typography.css
@@ -3,6 +3,6 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 h1 {
-  @apply text-2xl font-semibold;
+  @apply text-4xl font-semibold tracking-tight;
   text-indent: 0; /* no permlink markdown-it-anchor */
 }
