--- a/src/_layouts/blog-post.html
+++ b/src/_layouts/blog-post.html
@@ -4,20 +4,22 @@ bodyClass: text-gray-800 bg-gray-200
 ---
 
 <main id="main">
-  <div class="post content-wrapper">
-    <div class="date">
-      <time datetime="{{ page.date | w3DateFilter }}"></time>
-      {{ page.date | dateFilter }}
-    </div>
-    <div class="title">
+  <article class="post content-wrapper">
+    <div class="title mt-48 mb-24 text-center">
       <h1>{{ title }}</h1>
       {% if subtitle %}
-      <p class="mt-0">{{ subtitle }}</p>
+      <p class="mt-0 text-xl">
+        {{ subtitle }}
+      </p>
       {% endif %}
-      <span class="byline"
-        >by <span>{{ author }}</span>
-      </span>
+
+      <p class="my-0 text-base text-gray-600">
+        <time datetime="{{ page.date | w3DateFilter }}"
+          >{{ page.date | dateFilter }}</time
+        >
+        <span class="byline">&middot; {{ author }}</span>
+      </p>
     </div>
     {{ content | safe }}
-  </div>
+  </article>
 </main>
