--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,5 +1,5 @@
-<footer role="contentinfo" class="content-wrapper py-16 text-center text-gray-600">
+<footer role="contentinfo" class="text-sm content-wrapper py-16 text-center text-gray-600">
 
-<p>&copy 2020 &middot; Jan De Wilde / John Peach</p>
+<p class="mb-2">&copy 2020 &middot; Jan De Wilde / John Peach</p>
 <a href="mailto:hi@wildpeaches.xyz">Email Us</a>
 </footer>
