--- a/src/_layouts/blog-post.html
+++ b/src/_layouts/blog-post.html
@@ -6,7 +6,7 @@ bodyClass: text-gray-800 bg-gray-200
 <main id="main">
   <article class="post content-wrapper">
     <div class="title mt-48 mb-24 text-center">
-      <h1 class="leading-xtight">{{ title }}</h1>
+      <h1 class="leading-tight">{{ title }}</h1>
       {% if subtitle %}
       <p class="leading-tight mt-4 text-xl">
         {{ subtitle }}
