--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,5 +1,6 @@
-<footer role="contentinfo" class="text-sm content-wrapper py-16 text-center text-gray-600">
-
-<p class="mb-2">&copy 2020 &middot; Jan De Wilde / John Peach</p>
-<a href="mailto:hi@wildpeaches.xyz">Email Us</a>
+<footer role="contentinfo" class="text-lg center-l mt-8 mb-16 text-gray-600 font-inter">
+<div class="stack-l text-center {{ bodyClass }}">
+  <p class="">&copy 2020 &middot; Jan De Wilde &amp; John Peach</p>
+  <a href="mailto:hi@wildpeaches.xyz">Email Us</a>
+</div>
 </footer>
