--- a/src/_layouts/blog-post.html
+++ b/src/_layouts/blog-post.html
@@ -1,25 +1,28 @@
 ---
 layout: default
-bodyClass: text-gray-800 bg-gray-200
+bodyClass: text-gray-700 bg-gray-100
 ---
 
-<main id="main">
-  <article class="post content-wrapper">
-    <div class="title mt-48 mb-24 text-center">
-      <h1 class="leading-tight">{{ title }}</h1>
+<main id="main" class="center-l">
+  <article class="post stack-l leading-relaxed">
+    <div class="title mt-24 mb-6 center-l">
+      <h1 class="leading-tight text-5xl">{{ title }}</h1>
       {% if subtitle %}
-      <p class="leading-tight mt-4 text-xl">
+      <p class="leading-tight mt-2 text-2xl font-inter">
         {{ subtitle }}
       </p>
       {% endif %}
 
-      <p class="my-0 text-base text-gray-600">
+      <p class="mt-8 text-base text-gray-600 font-inter">
         <time datetime="{{ page.date | w3DateFilter }}"
           >{{ page.date | dateFilter }}</time
         >
         <span class="byline">&middot; {{ author }}</span>
       </p>
     </div>
+    {% if lede %}
+    <p class="lede">{{ lede }}</p>
+    {% endif %}
     {{ content | safe }}
   </article>
 </main>
