Fixes for centering layout and table (#61)
* Fix for table in lottery post

* Centering fixes

--- a/src/_layouts/blog-post.html
+++ b/src/_layouts/blog-post.html
@@ -4,8 +4,8 @@ bodyClass: text-gray-700 bg-gray-100
 ---
 
 <main id="main" class="center-l">
-  <article class="post stack-l leading-relaxed">
-    <div class="title mt-24 mb-6 center-l">
+  <article class="stack-l post leading-relaxed">
+    <div class="title mt-24 mb-6 center-l text-center">
       <h1 class="leading-tight text-5xl">{{ title }}</h1>
       {% if subtitle %}
       <p class="leading-tight mt-2 text-2xl font-inter">
