--- a/src/assets/styles/layouts/_center.css
+++ b/src/assets/styles/layouts/_center.css
@@ -2,9 +2,5 @@
 
 .center-l {
   max-width: 55ch;
-  margin-left: auto;
-  margin-right: auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  @apply ml-auto mr-auto px-8 box-content;
 }
