Remove horizontal padding from body,let .center-l apply it.

--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -6,7 +6,7 @@ title: Wild Peaches
 <html lang="en-US" dir="ltr">
   {% include 'head.html' %}
   <body
-    class="px-10 font-base text-xl overflow-x-hidden home-font-features {% if bodyClass %}{{ bodyClass }}{% endif %}"
+    class="font-base text-xl overflow-x-hidden home-font-features {% if bodyClass %}{{ bodyClass }}{% endif %}"
   >
     {% include 'global-nav.html' %} 
     {{ content | safe}}
