--- a/src/_includes/global-nav.html
+++ b/src/_includes/global-nav.html
@@ -5,7 +5,7 @@
       <li>
         <a
           href="{{ item.url }}"
-          class="{{ item.cssClass }} {{ bodyClass }} no-underline"
+          class="{{ item.cssClass }} {{ bodyClass }} border-b-0"
           {{
           helpers.getLinkActiveState(item.url,
           page.url)
