Added Cloudflare analytics snippet - Claims to not track individual users, so there

--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -11,5 +11,6 @@ title: Wild Peaches
     {% include 'global-nav.html' %} 
     {{ content | safe}}
     {% include 'footer.html' %}
+    {% include 'analytics.html' %}
   </body>
 </html>
