--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,6 +1,9 @@
 <footer role="contentinfo" class="text-lg center-l mt-8 mb-16 text-gray-600 font-inter">
 <div class="stack-l text-center {{ bodyClass }}">
-  <p class="">&copy 2020 &middot; Jan De Wilde &amp; John Peach</p>
-  <p><a href="mailto:hi@wildpeaches.xyz" class="border-current">Email Us</a></p>
-</div>
+  <p class="">&copy 2020 Jan De Wilde &amp; John Peach</p>
+  <p>
+    <a href="mailto:hi@wildpeaches.xyz" class="border-current">Email Us</a>
+    &middot;
+    <a href="https://github.com/jandw/wildpeaches" class="border-current">GitHub</a>
+  </p>
 </footer>
