Email subscription form (#73)
* Mailchimp signup snippet (not hooked up)

* Swapped Mailchimp for Buttondown email subscription form

* Install dotenv

* Styles for email subscription

* Subscription confirmation, styling, addition to navigation

* Removed smooth scrolling behavior
- clicking the subscribe link in the global nav wouldn't scoll all the way down to the subscribe box on initial page load. I think it might be because of the lazy-loading attribute on the images, and no width/height attributes being set on the img tags in the HTML.

* Remove tracking promise
- buttondown's email asking for confirmatiom seems to contain a tracker, so remove promise that we don't track until I make sure

* Remove tags from index.html

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,9 +1,14 @@
-<footer role="contentinfo" class="text-lg center-l mt-8 mb-16 text-gray-600 font-inter">
-<div class="stack-l text-center {{ bodyClass }}">
-  <p class="">&copy 2020 Jan De Wilde &amp; John Peach</p>
-  <p>
-    <a href="mailto:hi@wildpeaches.xyz" class="border-current">Email Us</a>
-    &middot;
-    <a href="https://github.com/jandw/wildpeaches" class="border-current">GitHub</a>
-  </p>
+<footer role="contentinfo" class="text-base center-l mt-8 mb-16 font-inter">
+  <div class="stack-l text-center">
+    <p class="">&copy 2020 Jan De Wilde &amp; John Peach</p>
+    <p>
+      <a href="#top" class="border-current">↑ To Top</a>
+      &middot;
+      <a href="mailto:hi@wildpeaches.xyz" class="border-current">Email Us</a>
+      &middot;
+      <a href="https://github.com/jandw/wildpeaches" class="border-current"
+        >GitHub</a
+      >
+    </p>
+  </div>
 </footer>
