Fix spacing footer

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,6 +1,6 @@
-<footer role="contentinfo" class="text-base center-l mt-8 mb-16 font-inter">
+<footer class="text-base center-l mt-8 pb-16 font-inter">
   <div class="stack-l text-center">
-    <p class="">&copy 2020&thinsp;&ndash;&thinsp;{{ helpers.currentYear() }} Jan De Wilde &amp; John Peach</p>
+    <p class="">&copy; 2020&thinsp;&ndash;&thinsp;{{ helpers.currentYear() }} Jan De Wilde &amp; John Peach</p>
     <p>
       <a href="#top" class="border-current">↑ To Top</a>
       &middot;
