Blogpost masthead tweaks - moved date above title using flexbox order (so if screen reader navigates by headers, user doesn't skip byline

--- a/src/assets/styles/components/_post.css
+++ b/src/assets/styles/components/_post.css
@@ -18,7 +18,7 @@
 } */
 
 .post > h2 {
-  @apply text-2xl text-gray-900 font-medium pt-4 mb-2;
+  @apply text-xl text-gray-900 font-medium pt-4 mb-2;
 }
 
 .post > ol,
