--- a/src/_layouts/blog-post.html
+++ b/src/_layouts/blog-post.html
@@ -7,20 +7,21 @@ includeSubscription: true
 
 <main id="main" class="center-l mb-12">
   <article class="stack-l post leading-relaxed">
-    <div class="title mt-24 mb-0">
-      <h1
-        class="leading-tighter text-5xl font-inter font-extrabold border-l-8 pl-4 -ml-6 border-gray-200"
-      >
-        {{ title }}
-      </h1>
-      {% if subtitle %}
-      <p class="leading-tight mt-4 text-2xl font-inter">
-        <span class="sr-only">Subtitle:</span>
-        {{ subtitle }}
-      </p>
-      {% endif %}
-
-      <p class="text-base text-gray-600 font-inter max-w-none">
+    <div class="title mt-24 mb-0 flex flex-col">
+      <div class="order-2">
+        <h1
+          class="leading-tighter text-5xl font-inter font-extrabold border-l-8 pl-4 -ml-6 border-gray-200"
+        >
+          {{ title }}
+        </h1>
+        {% if subtitle %}
+        <p class="leading-tight mt-4 text-2xl font-inter">
+          <span class="sr-only">Subtitle:</span>
+          {{ subtitle }}
+        </p>
+        {% endif %}
+      </div>
+      <p class="text-base text-gray-600 font-inter max-w-none order-1">
         <time datetime="{{ page.date | w3DateFilter }}"
           >{{ page.date | dateFilter }}</time
         >
@@ -28,7 +29,7 @@ includeSubscription: true
       </p>
     </div>
     {% if lede %}
-    <p class="lede mt-0">{{ lede }}</p>
+    <p class="lede">{{ lede }}</p>
     {% endif %} {{ content | safe }}
   </article>
 </main>
