--- a/src/_includes/meta.html
+++ b/src/_includes/meta.html
@@ -3,5 +3,5 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 <meta
   name="description"
-  content="Project blog for two ex-neighbors"
+  content="Project blog by two ex-neighbors"
 />
