--- a/src/_layouts/blog-post.html
+++ b/src/_layouts/blog-post.html
@@ -5,30 +5,22 @@ subClass: text-teal-100 bg-blue-900
 includeSubscription: true
 ---
 
+{% set ledeTopMargin = "" %}
+
 <main id="main" class="center-l mb-12">
   <article class="stack-l post leading-relaxed">
-    <div class="title mt-24 mb-0 flex flex-col">
-      <h1
-        class="leading-tighter text-5xl font-inter font-extrabold border-l-8 pl-4 -ml-6 border-gray-200"
-      >
-        {{ title }}
-      </h1>
-      {% if subtitle %}
-      <p class="leading-tight mt-4 text-2xl font-inter">
-        <span class="sr-only">Subtitle:</span>
-        {{ subtitle }}
-      </p>
-      {% endif %}
-
-      <p class="text-base text-gray-600 font-inter max-w-none order-first">
-        <time datetime="{{ page.date | w3DateFilter }}"
-          >{{ page.date | dateFilter }}</time
-        >
-        <span class="byline">&middot; {{ author }}</span>
-      </p>
+    {% if not hero %}
+    <div class="mt-24">
+      {% include "post-masthead.html" %}
     </div>
+    {% else %} 
+      {% set ledeTopMargin = "mt-16" %}
+      {% include "post-hero.html" %}
+    {% endif %} 
+    
     {% if lede %}
-    <p class="lede">{{ lede }}</p>
-    {% endif %} {{ content | safe }}
+    <p class="lede {{ ledeTopMargin }}">{{ lede }}</p>
+    {% endif %} 
+    {{ content | safe }}
   </article>
 </main>
