--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -1,5 +1,9 @@
 <head>
   <!-- META -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
   {% include "meta.html" %}
 
   <link rel="stylesheet" href="/assets/styles/style.min.css" />
