--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -1,5 +1,6 @@
 ---
 title: Wild Peaches
+socialImg: /assets/img/of-sailing-ships-velociraptors-and-walking-on-the-moon/hero-image.jpg
 ---
 
 <!DOCTYPE html>
