--- a/src/_includes/post-masthead.html
+++ b/src/_includes/post-masthead.html
@@ -1,11 +1,11 @@
 <div class="title mb-0 flex flex-col">
   <h1
-    class="leading-tighter text-5xl font-inter font-extrabold border-l-8 pl-4 -ml-6 border-gray-200"
+    class="leading-tighter text-5xl font-inter font-extrabold border-l-8 py-2 pl-4 -ml-6 border-gray-200"
   >
     {{ title }}
   </h1>
   {% if subtitle %}
-  <p class="leading-tight mt-4 text-2xl font-inter">
+  <p class="leading-tight mt-4 text-2xl font-inter pb-8">
     <span class="sr-only">Subtitle:</span>
     {{ subtitle }}
   </p>
