--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -1,3 +1,7 @@
+{% set css %}
+  {% include "../assets/styles/style.min.css" %}
+{% endset %}
+
 <head>
   <!-- META -->
   <meta charset="UTF-8" />
@@ -6,7 +10,8 @@
 
   {% include "meta.html" %}
 
-  <link rel="stylesheet" href="/assets/styles/style.min.css" />
+  <style>{{ css | safe }}</style> 
+
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
 
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
