letter and table shortcodes (#108)
* Added letter paired shortcode

* Add table and letter shortcodes

--- a/src/assets/styles/base/_base.css
+++ b/src/assets/styles/base/_base.css
@@ -13,7 +13,7 @@ figcaption {
 /* h1 {@apply text-center;} */
 
 table {
-  @apply text-base;
+  @apply text-base w-full;
 }
 
 code[class*="language-"],
