--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -1,18 +1,17 @@
-{% set css %}
-  {% include "../assets/styles/style.min.css" %}
-{% endset %}
+{%- set css %}
+  {%- include "../assets/styles/style.min.css" %}
+{%- endset %}
 
 <head>
   <!-- META -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-
-  {% include "meta.html" %}
+  <meta name="google-site-verification" content="5Z_KiijxY41bgn9up8h0wpo_2REAC199OsmISONScjY" />
+  {%- include "meta.html" %}
 
   <style>{{ css | safe }}</style> 
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
-
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 </head> 
