Tweaking. Bye blue.

--- a/src/_includes/post-masthead.html
+++ b/src/_includes/post-masthead.html
@@ -1,6 +1,6 @@
 <div class="title mb-0 flex flex-col">
   <h1
-    class="leading-none tracking-tight text-3xl sm:text-5xl lg:text-6xl  font-inter font-extrabold border-l-8 py-2 pl-4 -ml-6"
+    class="leading-none tracking-tight text-3xl sm:text-5xl lg:text-6xl  font-inter font-extrabold py-2 pl-4 -ml-6"
   >
     {{ title }}
   </h1>
