--- a/src/_includes/subscription-form.html
+++ b/src/_includes/subscription-form.html
@@ -1,5 +1,5 @@
 <aside
-  class="font-inter bg-gray-900 sm:rounded-xl p-4 text-base max-w-md center-l {{ subClass }}"
+  class="font-inter sm:rounded-xl p-4 text-base max-w-md center-l {{ subClass }}"
   aria-labelledby="subscribe-and-stay-in-the-loop"
 >
   <div>
