--- a/src/_layouts/blog-post.html
+++ b/src/_layouts/blog-post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 bodyClass: text-gray-700 bg-gray-50
-subClass: text-teal-100 bg-blue-900
+subClass: text-gray-200 bg-gray-800
 includeSubscription: true
 ---
 
