blurred hero image background

--- a/src/_includes/post-hero.html
+++ b/src/_includes/post-hero.html
@@ -1,4 +1,4 @@
-<div class="hero">
+<div class="hero" style="--hero-img: url({{hero.url}})">
   <div class="hero__wrapper">
     <img
       src="{{ hero.url }}"
