--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,12 +1,12 @@
-<footer class="text-base center-l mt-8 pb-16 font-inter">
-  <div class="stack-l text-center">
+<footer class="text-base o-center mt-8 pb-16 font-sans text-gray-700">
+  <div class="o-stack text-center">
     <p class="">&copy; 2020&thinsp;&ndash;&thinsp;{{ helpers.currentYear() }} Jan De Wilde &amp; John Peach</p>
     <p>
-      <a href="#top" class="border-current">↑ To Top</a>
+      <a href="#top" class="u-border-current">↑ To Top</a>
       &middot;
-      <a href="mailto:hi@wildpeaches.xyz" class="border-current">Email Us</a>
+      <a href="mailto:hi@wildpeaches.xyz" class="u-border-current">Email Us</a>
       &middot;
-      <a href="https://github.com/jandw/wildpeaches" class="border-current"
+      <a href="https://github.com/jandw/wildpeaches" class="u-border-current"
         >GitHub</a
       >
     </p>
