--- a/src/_includes/post-hero.html
+++ b/src/_includes/post-hero.html
@@ -5,7 +5,7 @@
       alt="{{ hero.alt }}"
     />
     <div class="hero__overlay" aria-hidden="true"></div>
-    <div class="hero__masthead center-l">
+    <div class="hero__masthead o-center">
       {% include "post-masthead.html" %}
     </div>
   </div>
