--- a/src/_includes/post-masthead.html
+++ b/src/_includes/post-masthead.html
@@ -1,17 +1,17 @@
 <div class="title mb-0 flex flex-col">
   <h1
-    class="leading-none tracking-tight text-3xl sm:text-5xl lg:text-6xl  font-inter font-extrabold py-2 pl-4 -ml-6"
+    class="leading-none tracking-tight text-3xl sm:text-5xl lg:text-6xl  font-sans font-extrabold py-2 pl-4 -ml-6"
   >
     {{ title }}
   </h1>
   {% if subtitle %}
-  <p class="leading-tight mt-4 text-2xl font-inter pb-8">
+  <p class="leading-tight mt-4 text-2xl font-sans pb-8">
     <span class="sr-only">Subtitle:</span>
     {{ subtitle }}
   </p>
   {% endif %}
 
-  <p class="text-base font-inter max-w-none order-first">
+  <p class="text-base font-sans max-w-none order-first">
     <time datetime="{{ page.date | w3DateFilter }}"
       >{{ page.date | dateFilter }}</time
     >
