--- a/src/_includes/subscription-form.html
+++ b/src/_includes/subscription-form.html
@@ -1,17 +1,14 @@
 <aside
-  class="font-inter sm:rounded-xl p-4 text-base max-w-md center-l {{ subClass }}"
+  class="font-sans p-4 text-base max-w-md o-center o-stack text-gray-800 bg-gray-100 sm:rounded-md "
   aria-labelledby="subscribe-and-stay-in-the-loop"
 >
   <div>
-    <h2 id="subscribe-and-stay-in-the-loop" class="font-bold no-indent text-white">
-      Subscribe and stay in the loop.
+    <h2 id="subscribe-and-stay-in-the-loop" class="font-bold u-no-indent sm:text-center">
+      📬 Subscribe and stay in the loop.
     </h2>
-    <p>
-      Subscribe with your email address below and we'll notify you when a new post has been published.
-    </p>
   </div>
   <form
-    class="email-form text-white"
+    class="email-form"
     name="newsletter"
     method="POST"
     data-netlify="true"
@@ -33,12 +30,12 @@
             type="email"
             name="email"
             id="email"
-            class="block sm:max-w-xs w-full px-4 py-3 text-base appearance-none border border-gray-300 shadow-none bg-white text-blue-900 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-blue focus:border-blue-300"
+            class="block sm:max-w-xs w-full px-4 py-3 text-base appearance-none border border-gray-300 shadow-none bg-white text-blue-900 rounded-md placeholder-gray-400 focus:outline-none focus:ring focus:border-blue-300 sm:rounded-none sm:rounded-l-md"
             required
           />
           <button
-            type="submit"
-            class="mt-4 relative sm:mt-0 sm:h-auto sm:ml-4 block w-full sm:w-auto border border-transparent px-6 py-3 text-base font-semibold leading-snug bg-blue-600 text-white rounded-md shadow-md hover:bg-blue-500 focus:outline-none focus:bg-blue-500 transition ease-in-out duration-150"
+            type="submit" 
+            class="mt-4 relative sm:mt-0 sm:h-auto block w-full sm:w-auto border border-blue-600 px-6 py-3 text-base font-semibold leading-snug bg-blue-600 text-white rounded-md sm:rounded-none sm:rounded-r-md shadow-md hover:bg-blue-500 focus:outline-none focus:bg-blue-500 transition ease-in-out duration-150"
           >
             Subscribe
           </button>
