--- a/src/assets/styles/base/_base.css
+++ b/src/assets/styles/base/_base.css
@@ -1,3 +1,17 @@
+*,
+*::before,
+*::after {
+}
+
+html {
+  font-size: 10px;
+}
+
+body {
+  @apply text-base overflow-x-hidden min-h-screen m-0 p-0 font-serif;
+  text-rendering: optimizeSpeed;
+}
+
 p,
 h1,
 h2,
@@ -16,12 +30,12 @@ table {
   @apply text-base w-full;
 }
 
-code[class*="language-"],
-pre[class*="language-"] {
+code[class*='language-'],
+pre[class*='language-'] {
   @apply text-base;
 }
 
 pre,
 .table-wrapper {
-  overflow-x: scroll;
+  overflow-x: auto;
 }
