--- a/src/_includes/post-hero.html
+++ b/src/_includes/post-hero.html
@@ -6,7 +6,7 @@
     />
     <div class="hero__overlay" aria-hidden="true"></div>
     <div class="hero__masthead o-center">
-      {% include "post-masthead.html" %}
+      {%- include "post-masthead.html" %}
     </div>
   </div>
 </div>
