--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -5,16 +5,16 @@ socialImg: /assets/img/of-sailing-ships-velociraptors-and-walking-on-the-moon/he
 
 <!DOCTYPE html>
 <html lang="en-US" dir="ltr">
-  {% include 'head.html' %}
+  {%- include 'head.html' %}
   <body
-    class="text-base sm:text-lg md:text-xl overflow-x-hidden home-font-features {% if bodyClass %}{{ bodyClass }}{% endif %}"
+    class="text-base sm:text-lg md:text-xl overflow-x-hidden home-font-features {%- if bodyClass %}{{ bodyClass }}{%- endif %}"
   >
-    {% include 'global-nav.html' %} 
+    {%- include 'global-nav.html' %} 
     {{ content | safe }}
-    {% if includeSubscription %}
-      {% include "subscription-form.html" %}
-    {% endif%}
-    {% include 'footer.html' %}
-    {% include 'analytics.html' %}
+    {%- if includeSubscription %}
+      {%- include "subscription-form.html" %}
+    {%- endif%}
+    {%- include 'footer.html' %}
+    {%- include 'analytics.html' %}
   </body>
 </html>
