Subscription form update

--- a/src/_includes/subscription-form.html
+++ b/src/_includes/subscription-form.html
@@ -4,7 +4,8 @@
 >
   <div>
     <h2 id="subscribe-and-stay-in-the-loop" class="font-bold u-no-indent sm:text-center">
-      📬 Subscribe and stay in the loop.
+      <div aria-hidden="true" class="hidden text-4xl sm:block">📮</div> 
+      Stay in the loop!
     </h2>
   </div>
   <form
@@ -23,7 +24,7 @@
         </label>
       </div>
 
-      <label
+      <label class="text-sm text-gray-600"
         >Your email address
         <div class="sm:flex">
           <input
